apps/dashboard/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard-route
  namespace: dashboard
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - "dashboard.tequila.megakuul.ch"

  rules:
    - matches:
        - path: 
            type: PathPrefix
            value: /
      backendRefs:
        - name: kubernetes-dashboard-kong-proxy
          port: 443
